--- a/public/css/style.css
+++ b/public/css/style.css
@@ -542,15 +542,15 @@ video {
   padding-left: 16px;
 }
 
-@media (min-width: 360px) {
+@media (min-width: 173px) {
   .container {
-    max-width: 360px;
+    max-width: 173px;
   }
 }
 
-@media (min-width: 640px) {
+@media (min-width: 200px) {
   .container {
-    max-width: 640px;
+    max-width: 200px;
   }
 }
 
@@ -572,9 +572,9 @@ video {
   }
 }
 
-@media (min-width: 1320px) {
+@media (min-width: 1536px) {
   .container {
-    max-width: 1320px;
+    max-width: 1536px;
   }
 }
 
@@ -618,6 +618,10 @@ video {
   top: 0px;
 }
 
+.top-7 {
+  top: 1.75rem;
+}
+
 .top-9 {
   top: 2.25rem;
 }
@@ -656,6 +660,10 @@ video {
   margin-left: auto;
 }
 
+.mr-20 {
+  margin-right: 5rem;
+}
+
 .mr-5 {
   margin-right: 1.25rem;
 }
@@ -672,24 +680,12 @@ video {
   margin-top: 3.5rem;
 }
 
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
-}
-
 .box-border {
   box-sizing: border-box;
 }
 
 .block {
   display: block;
-}
-
-.inline-block {
-  display: inline-block;
 }
 
 .flex {
@@ -720,36 +716,28 @@ video {
   height: 53px;
 }
 
-.h-height780 {
-  height: 800px;
-}
-
-.h-height88 {
-  height: 88px;
-}
-
 .h-screen {
   height: 100vh;
 }
 
-.w-1\/3 {
-  width: 33.333333%;
+.min-h-\[780px\] {
+  min-height: 780px;
+}
+
+.min-h-\[88px\] {
+  min-height: 88px;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
 }
 
 .w-2 {
   width: 0.5rem;
 }
 
-.w-2\/4 {
-  width: 50%;
-}
-
 .w-4\/5 {
   width: 80%;
-}
-
-.w-\[127px\] {
-  width: 127px;
 }
 
 .w-\[146px\] {
@@ -764,28 +752,12 @@ video {
   width: 178px;
 }
 
-.w-\[60px\] {
-  width: 60px;
-}
-
 .w-full {
   width: 100%;
 }
 
-.w-2\/3 {
-  width: 66.666667%;
-}
-
-.w-3\/4 {
-  width: 75%;
-}
-
-.w-1\/4 {
-  width: 25%;
-}
-
-.w-1\/2 {
-  width: 50%;
+.max-w-\[100\%\] {
+  max-width: 100%;
 }
 
 .max-w-\[280px\] {
@@ -845,6 +817,10 @@ video {
   justify-content: space-between;
 }
 
+.self-end {
+  align-self: flex-end;
+}
+
 .self-center {
   align-self: center;
 }
@@ -885,11 +861,6 @@ video {
   background-color: rgb(179 236 240 / var(--tw-bg-opacity));
 }
 
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
 .bg-customBackColor {
   --tw-bg-opacity: 1;
   background-color: rgb(246 246 246 / var(--tw-bg-opacity));
@@ -914,36 +885,9 @@ video {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
-.p-\[10px\] {
-  padding: 10px;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-}
-
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
 }
 
 .px-8 {
@@ -966,16 +910,32 @@ video {
   padding-bottom: 1rem;
 }
 
+.pb-4 {
+  padding-bottom: 1rem;
+}
+
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+
+.pl-10 {
+  padding-left: 2.5rem;
+}
+
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
+.pr-12 {
+  padding-right: 3rem;
+}
+
 .pr-2 {
   padding-right: 0.5rem;
 }
 
-.pr-24 {
-  padding-right: 6rem;
-}
-
-.pt-10 {
-  padding-top: 2.5rem;
+.pr-5 {
+  padding-right: 1.25rem;
 }
 
 .pt-14 {
@@ -984,6 +944,10 @@ video {
 
 .pt-20 {
   padding-top: 5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
 }
 
 .pt-5 {
@@ -996,34 +960,6 @@ video {
 
 .pt-\[130px\] {
   padding-top: 130px;
-}
-
-.pt-4 {
-  padding-top: 1rem;
-}
-
-.pb-6 {
-  padding-bottom: 1.5rem;
-}
-
-.pb-4 {
-  padding-bottom: 1rem;
-}
-
-.pr-5 {
-  padding-right: 1.25rem;
-}
-
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pb-10 {
-  padding-bottom: 2.5rem;
-}
-
-.pr-10 {
-  padding-right: 2.5rem;
 }
 
 .text-center {
@@ -1051,6 +987,10 @@ video {
   font-size: 22px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
 .text-\[48px\] {
   font-size: 48px;
 }
@@ -1073,6 +1013,11 @@ video {
 }
 
 .text-LogoColor {
+  --tw-text-opacity: 1;
+  color: rgb(188 188 188 / var(--tw-text-opacity));
+}
+
+.text-\[\#BCBCBC\] {
   --tw-text-opacity: 1;
   color: rgb(188 188 188 / var(--tw-text-opacity));
 }
@@ -1204,12 +1149,6 @@ body{
   opacity: 0.8;
 }
 
-.hover\:shadow-sm:hover {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .group:hover .group-hover\:scale-x-100 {
   --tw-scale-x: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1220,129 +1159,7 @@ body{
   color: rgb(0 152 158 / var(--tw-text-opacity));
 }
 
-@media (min-width: 360px) {
-  .cs\:bottom-\[20\%\] {
-    bottom: 20%;
-  }
-
-  .cs\:bottom-\[30\%\] {
-    bottom: 30%;
-  }
-
-  .cs\:bottom-\[50\%\] {
-    bottom: 50%;
-  }
-
-  .cs\:right-\[-5\%\] {
-    right: -5%;
-  }
-
-  .cs\:right-\[5\%\] {
-    right: 5%;
-  }
-
-  .cs\:top-0 {
-    top: 0px;
-  }
-
-  .cs\:top-\[10\%\] {
-    top: 10%;
-  }
-
-  .cs\:order-2 {
-    order: 2;
-  }
-
-  .cs\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .cs\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .cs\:mt-6 {
-    margin-top: 1.5rem;
-  }
-
-  .cs\:hidden {
-    display: none;
-  }
-
-  .cs\:h-\[1001px\] {
-    height: 1001px;
-  }
-
-  .cs\:h-\[11px\] {
-    height: 11px;
-  }
-
-  .cs\:h-\[80\%\] {
-    height: 80%;
-  }
-
-  .cs\:w-\[14px\] {
-    width: 14px;
-  }
-
-  .cs\:w-\[20\%\] {
-    width: 20%;
-  }
-
-  .cs\:w-\[80\%\] {
-    width: 80%;
-  }
-
-  .cs\:w-full {
-    width: 100%;
-  }
-
-  .cs\:justify-around {
-    justify-content: space-around;
-  }
-
-  .cs\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
-  .cs\:pt-20 {
-    padding-top: 5rem;
-  }
-
-  .cs\:text-center {
-    text-align: center;
-  }
-
-  .cs\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .cs\:text-\[14px\] {
-    font-size: 14px;
-  }
-
-  .cs\:text-\[30px\] {
-    font-size: 30px;
-  }
-
-  .cs\:text-\[34px\] {
-    font-size: 34px;
-  }
-
-  .cs\:text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-  }
-
-  .cs\:leading-3 {
-    line-height: .75rem;
-  }
-}
-
-@media (min-width: 640px) {
+@media (min-width: 200px) {
   .sm\:order-1 {
     order: 1;
   }
@@ -1352,12 +1169,8 @@ body{
     margin-right: auto;
   }
 
-  .sm\:h-\[999px\] {
-    height: 999px;
-  }
-
-  .sm\:w-\[70\%\] {
-    width: 70%;
+  .sm\:w-\[80\%\] {
+    width: 80%;
   }
 
   .sm\:w-full {
@@ -1366,6 +1179,11 @@ body{
 }
 
 @media (min-width: 768px) {
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1375,12 +1193,12 @@ body{
     display: block;
   }
 
-  .md\:h-\[1078px\] {
-    height: 1078px;
-  }
-
   .md\:h-\[118px\] {
     height: 118px;
+  }
+
+  .md\:h-\[43px\] {
+    height: 43px;
   }
 
   .md\:h-\[90px\] {
@@ -1391,8 +1209,8 @@ body{
     width: 50%;
   }
 
-  .md\:w-4\/5 {
-    width: 80%;
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:w-\[445px\] {
@@ -1407,8 +1225,17 @@ body{
     width: 90px;
   }
 
-  .md\:w-1\/3 {
-    width: 33.333333%;
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .md\:pt-0 {
+    padding-top: 0px;
   }
 
   .md\:text-\[16px\] {
@@ -1478,11 +1305,6 @@ body{
     margin-right: 0px;
   }
 
-  .lg\:mx-auto {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -1499,16 +1321,12 @@ body{
     height: 22px;
   }
 
-  .lg\:h-\[43px\] {
-    height: 43px;
-  }
-
   .lg\:h-\[53px\] {
     height: 53px;
   }
 
-  .lg\:h-\[800px\] {
-    height: 800px;
+  .lg\:h-\[88px\] {
+    height: 88px;
   }
 
   .lg\:w-1\/2 {
@@ -1517,6 +1335,10 @@ body{
 
   .lg\:w-3\/6 {
     width: 50%;
+  }
+
+  .lg\:w-4\/5 {
+    width: 80%;
   }
 
   .lg\:w-5\/6 {
@@ -1531,24 +1353,12 @@ body{
     width: 331px;
   }
 
-  .lg\:w-width90 {
-    width: 95%;
-  }
-
-  .lg\:w-1\/3 {
-    width: 33.333333%;
-  }
-
   .lg\:max-w-full {
     max-width: 100%;
   }
 
   .lg\:gap-3 {
     gap: 0.75rem;
-  }
-
-  .lg\:self-end {
-    align-self: flex-end;
   }
 
   .lg\:rounded-full {
