--- a/public/css/style.css
+++ b/public/css/style.css
@@ -542,15 +542,21 @@ video {
   padding-left: 16px;
 }
 
-@media (min-width: 173px) {
+@media (min-width: 50px) {
   .container {
-    max-width: 173px;
+    max-width: 50px;
   }
 }
 
-@media (min-width: 200px) {
+@media (min-width: 228px) {
   .container {
-    max-width: 200px;
+    max-width: 228px;
+  }
+}
+
+@media (min-width: 400px) {
+  .container {
+    max-width: 400px;
   }
 }
 
@@ -560,9 +566,9 @@ video {
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1033px) {
   .container {
-    max-width: 1024px;
+    max-width: 1033px;
   }
 }
 
@@ -588,6 +594,10 @@ video {
 
 .relative {
   position: relative;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .bottom-\[-7px\] {
@@ -638,6 +648,14 @@ video {
   z-index: 10;
 }
 
+.z-0 {
+  z-index: 0;
+}
+
+.order-2 {
+  order: 2;
+}
+
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -646,6 +664,14 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
+}
+
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
 .mb-6 {
@@ -662,6 +688,10 @@ video {
 
 .mr-20 {
   margin-right: 5rem;
+}
+
+.mr-4 {
+  margin-right: 1rem;
 }
 
 .mr-5 {
@@ -720,12 +750,16 @@ video {
   height: 100vh;
 }
 
-.min-h-\[780px\] {
-  min-height: 780px;
+.max-h-\[348px\] {
+  max-height: 348px;
 }
 
-.min-h-\[88px\] {
-  min-height: 88px;
+.min-h-\[768px\] {
+  min-height: 768px;
+}
+
+.min-h-\[780px\] {
+  min-height: 780px;
 }
 
 .w-1\/6 {
@@ -734,10 +768,6 @@ video {
 
 .w-2 {
   width: 0.5rem;
-}
-
-.w-4\/5 {
-  width: 80%;
 }
 
 .w-\[146px\] {
@@ -762,6 +792,10 @@ video {
 
 .max-w-\[280px\] {
   max-width: 280px;
+}
+
+.max-w-\[619px\] {
+  max-width: 619px;
 }
 
 .max-w-full {
@@ -807,6 +841,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -876,9 +914,18 @@ video {
   background-color: rgb(0 152 158 / var(--tw-bg-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .p-6 {
@@ -962,6 +1009,10 @@ video {
   padding-top: 130px;
 }
 
+.text-left {
+  text-align: left;
+}
+
 .text-center {
   text-align: center;
 }
@@ -985,10 +1036,6 @@ video {
 
 .text-\[22px\] {
   font-size: 22px;
-}
-
-.text-\[40px\] {
-  font-size: 40px;
 }
 
 .text-\[48px\] {
@@ -1159,7 +1206,245 @@ body{
   color: rgb(0 152 158 / var(--tw-text-opacity));
 }
 
-@media (min-width: 200px) {
+@media (min-width: 50px) {
+  .kcs\:flex {
+    display: flex;
+  }
+
+  .kcs\:hidden {
+    display: none;
+  }
+
+  .kcs\:h-\[100\%\] {
+    height: 100%;
+  }
+
+  .kcs\:h-\[70px\] {
+    height: 70px;
+  }
+
+  .kcs\:w-4\/5 {
+    width: 80%;
+  }
+
+  .kcs\:w-\[311px\] {
+    width: 311px;
+  }
+
+  .kcs\:w-\[420px\] {
+    width: 420px;
+  }
+
+  .kcs\:w-full {
+    width: 100%;
+  }
+
+  .kcs\:flex-col {
+    flex-direction: column;
+  }
+
+  .kcs\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .kcs\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .kcs\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .kcs\:pt-6 {
+    padding-top: 1.5rem;
+  }
+
+  .kcs\:pt-\[40px\] {
+    padding-top: 40px;
+  }
+
+  .kcs\:pt-\[80px\] {
+    padding-top: 80px;
+  }
+
+  .kcs\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .kcs\:text-\[10px\] {
+    font-size: 10px;
+  }
+
+  .kcs\:text-\[27px\] {
+    font-size: 27px;
+  }
+}
+
+@media (min-width: 228px) {
+  .cs\:bottom-\[20\%\] {
+    bottom: 20%;
+  }
+
+  .cs\:bottom-\[30\%\] {
+    bottom: 30%;
+  }
+
+  .cs\:bottom-\[50\%\] {
+    bottom: 50%;
+  }
+
+  .cs\:right-\[-5\%\] {
+    right: -5%;
+  }
+
+  .cs\:right-\[5\%\] {
+    right: 5%;
+  }
+
+  .cs\:top-0 {
+    top: 0px;
+  }
+
+  .cs\:top-\[10\%\] {
+    top: 10%;
+  }
+
+  .cs\:order-2 {
+    order: 2;
+  }
+
+  .cs\:mx-4 {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+
+  .cs\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .cs\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .cs\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .cs\:block {
+    display: block;
+  }
+
+  .cs\:flex {
+    display: flex;
+  }
+
+  .cs\:hidden {
+    display: none;
+  }
+
+  .cs\:h-\[10\%\] {
+    height: 10%;
+  }
+
+  .cs\:h-\[11px\] {
+    height: 11px;
+  }
+
+  .cs\:h-\[80\%\] {
+    height: 80%;
+  }
+
+  .cs\:h-\[88px\] {
+    height: 88px;
+  }
+
+  .cs\:w-\[14px\] {
+    width: 14px;
+  }
+
+  .cs\:w-\[20\%\] {
+    width: 20%;
+  }
+
+  .cs\:w-\[80\%\] {
+    width: 80%;
+  }
+
+  .cs\:w-full {
+    width: 100%;
+  }
+
+  .cs\:justify-around {
+    justify-content: space-around;
+  }
+
+  .cs\:px-0 {
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .cs\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .cs\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .cs\:pt-20 {
+    padding-top: 5rem;
+  }
+
+  .cs\:pt-5 {
+    padding-top: 1.25rem;
+  }
+
+  .cs\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
+  .cs\:text-center {
+    text-align: center;
+  }
+
+  .cs\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .cs\:text-\[14px\] {
+    font-size: 14px;
+  }
+
+  .cs\:text-\[30px\] {
+    font-size: 30px;
+  }
+
+  .cs\:text-\[34px\] {
+    font-size: 34px;
+  }
+
+  .cs\:text-xs {
+    font-size: 0.75rem;
+    line-height: 1rem;
+  }
+
+  .cs\:leading-3 {
+    line-height: .75rem;
+  }
+
+  .cs\:text-LogoColor {
+    --tw-text-opacity: 1;
+    color: rgb(188 188 188 / var(--tw-text-opacity));
+  }
+}
+
+@media (min-width: 400px) {
   .sm\:order-1 {
     order: 1;
   }
@@ -1169,12 +1454,44 @@ body{
     margin-right: auto;
   }
 
+  .sm\:hidden {
+    display: none;
+  }
+
+  .sm\:w-4\/5 {
+    width: 80%;
+  }
+
+  .sm\:w-\[331px\] {
+    width: 331px;
+  }
+
   .sm\:w-\[80\%\] {
     width: 80%;
   }
 
   .sm\:w-full {
     width: 100%;
+  }
+
+  .sm\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
+  .sm\:pt-\[100px\] {
+    padding-top: 100px;
+  }
+
+  .sm\:text-\[16px\] {
+    font-size: 16px;
+  }
+
+  .sm\:text-\[34px\] {
+    font-size: 34px;
+  }
+
+  .sm\:text-\[40px\] {
+    font-size: 40px;
   }
 }
 
@@ -1238,12 +1555,16 @@ body{
     padding-top: 0px;
   }
 
+  .md\:pt-10 {
+    padding-top: 2.5rem;
+  }
+
   .md\:text-\[16px\] {
     font-size: 16px;
   }
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1033px) {
   .lg\:static {
     position: static;
   }
@@ -1305,6 +1626,15 @@ body{
     margin-right: 0px;
   }
 
+  .lg\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .lg\:mt-36 {
+    margin-top: 9rem;
+  }
+
   .lg\:block {
     display: block;
   }
@@ -1317,8 +1647,16 @@ body{
     display: none;
   }
 
+  .lg\:h-1\/2 {
+    height: 50%;
+  }
+
   .lg\:h-\[22px\] {
     height: 22px;
+  }
+
+  .lg\:h-\[43px\] {
+    height: 43px;
   }
 
   .lg\:h-\[53px\] {
@@ -1331,6 +1669,10 @@ body{
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-3\/5 {
+    width: 60%;
   }
 
   .lg\:w-3\/6 {
@@ -1355,6 +1697,26 @@ body{
 
   .lg\:max-w-full {
     max-width: 100%;
+  }
+
+  .lg\:max-w-\[400px\] {
+    max-width: 400px;
+  }
+
+  .lg\:max-w-\[500px\] {
+    max-width: 500px;
+  }
+
+  .lg\:max-w-\[80px\] {
+    max-width: 80px;
+  }
+
+  .lg\:max-w-\[800px\] {
+    max-width: 800px;
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
   }
 
   .lg\:gap-3 {
@@ -1383,6 +1745,11 @@ body{
     background-color: rgb(0 0 0 / var(--tw-bg-opacity));
   }
 
+  .lg\:px-3 {
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+  }
+
   .lg\:px-4 {
     padding-left: 1rem;
     padding-right: 1rem;
@@ -1393,12 +1760,21 @@ body{
     padding-bottom: 0.5rem;
   }
 
+  .lg\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
   .lg\:pt-0 {
     padding-top: 0px;
   }
 
   .lg\:pt-36 {
     padding-top: 9rem;
+  }
+
+  .lg\:pl-10 {
+    padding-left: 2.5rem;
   }
 
   .lg\:text-left {
